--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "start:unions": "ts-node ./src/04-unions/index.ts",
     "start:generics": "ts-node ./src/05-generics/index.ts",
     "start:enums": "ts-node ./src/06-enums/index.ts",
-    "start:namespaces": "ts-node ./src/07-namespaces/output.js",
+    "compile:namespaces": "tsc --out ./src/07-namespaces/output.js ./src/07-namespaces/index.ts",
+    "start:namespaces": "npm run compile:namespaces && ts-node ./src/07-namespaces/output.js",
     "start:decorators": "ts-node ./src/08-decorators/index.ts",
     "start:typings": "ts-node ./src/09-typings/index.ts",
     "start:compiler": "ts-node ./src/10-compiler/index.ts",
     "test:types": "tsc ./src/01-types/index.ts && mocha -r ts-node/register ./src/01-types/index.spec.ts",
     "test:functions": "tsc ./src/02-functions/index.spec.ts && mocha -r ts-node/register ./src/02-functions/index.spec.ts",
+    "test:classes": "tsc --target es5 ./src/03-classes/index.spec.ts && mocha -r ts-node/register ./src/03-classes/index.spec.ts",
+    "test:unions": "tsc ./src/04-unions/index.spec.ts && mocha -r ts-node/register ./src/04-unions/index.spec.ts",
+    "test:generics": "tsc ./src/05-generics/index.spec.ts && mocha -r ts-node/register ./src/05-generics/index.spec.ts",
+    "test:enums": "tsc ./src/06-enums/index.spec.ts && mocha -r ts-node/register ./src/06-enums/index.spec.ts",
+    "test:decorators": "tsc --target es5 --experimentalDecorators ./src/08-decorators/index.spec.ts && mocha -r ts-node/register ./src/08-decorators/index.spec.ts",
     "test": "build && mocha -r ts-node/register src/**/*.spec.ts"
   },
   "keywords": [
