--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "4.1.4",
+    "@types/lodash": "4.14.116",
     "@types/mocha": "5.2.5",
     "chai": "4.1.2",
     "lodash": "4.17.10",
